# django-facturacion

./: .gitignore  pyproject.toml  requirements.txt
app/: PROBANDO JUPITER NOTEBOOK.ipynb  requirements.txt
app/api/: serializers.py  urls.py  views.py
app/app/: settings.py  urls.py
app/bases/: models.py  urls.py  views.py
app/bases/templates/bases/: login.html  sin_privilegios.html
app/cmp/: forms.py  models.py  reportes.py  urls.py  views.py
app/cmp/migrations/: 0001_initial.py  0002_comprasdet_comprasenc.py
app/cmp/templates/cmp/: compras.html  compras_det_del.html  compras_list.html  compras_print_all.html  compras_print_one.html  inactivar_prv.html  proveedor_form.html  proveedor_list.html
app/fac/: forms.py  models.py  reportes.py  urls.py  views.py
app/fac/migrations/: 0001_initial.py  0002_facturadet_facturaenc.py  0003_auto_20200620_1702.py
app/fac/templates/fac/: buscar_producto.html  cliente_form.html  cliente_list.html  factura_borrar_detalle.html  factura_list.html  factura_one.html  facturas.html  facturas_print_all.html
app/inv/: forms.py  models.py  urls.py  views.py
app/inv/migrations/: 0001_initial.py  0002_subcategoria.py  0003_marca.py  0004_auto_20200515_1808.py  0005_producto.py  0006_auto_20200520_0017.py  0007_auto_20200529_1446.py  0008_auto_20200606_1811.py  0009_auto_20200610_1334.py  0010_auto_20200613_1409.py  0011_auto_20200620_1702.py
app/inv/templates/inv/: catalogos_del.html  categoria_form.html  categoria_list.html  marca_form.html  um_form.html  (+6 more)
app/templates/base/: base.html
tests/: test_django_facturacion.py
(+1 files in other folders)
