[tool.poetry]
name = "django-facturacion"
version = "0.1.0"
description = ""
authors = ["owncreed93 <christiantarifer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "2.2"
pylint = "^2.5.2"
psycopg2 = "^2.8.5"
xhtml2pdf = "^0.2.4"
django-userforeignkey = "^0.3.0"
djangorestframework = "^3.11.0"
python-decouple = "^3.3"
dj-database-url = "^0.5.0"
gunicorn = "^20.0.4"
whitenoise = "^5.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
